# HPC

brandes/: Makefile  brandes  brandes copy.cu  example-edges.csv  lastfm-out-1.txt  loc-small-out.txt  loc-trunc-out.txt  out.txt  preprocess_gowalla.py  results-run1.csv  results-run2.csv  trash.txt  verifyprograms.py
brandes/entropy/: Makefile  brandes  brandes.cu  res-gen8.txt  res-gen9.txt
brandes/entropy/junk/: brandes-backup-9_40-unpinned_cont-dzialajace.cu  brandes-backup-pon-rano.cu  brandes-backup-pon-wiezcor-poprawne-na-loc-gowalla.cu  brandes-backup-sr-9_20-dzialajace-na-loc-gawall.cu  randes-backup-wt-wieczor-poprawne-na-loc-gowalla.cu
brandes/ms394734/: Makefile  brandes
brandes/ms394734/junk/: brandes-backup-03-05.cu  (+3 more)
lab1/: hello_world  mat_mult  mat_mult.cpp
lab1/__MACOSX/: ._hello_world.cpp  ._mat_mult.cpp
lab10/mpi-lab-04/: Makefile  my-dmmmult.cpp
lab2/: pi  pi.cpp
lab3/julia/: gpujulia
lab3/stencil/: Makefile  gpustencil.cu
lab4/raytrace/: a.out  raytrace  raytrace.cu  raytrace_sol.cu
lab5/streams/: double.cu  single
lab6/: rev  reverseArray.cu
lab7/: 01-intro.html
lab7/mpi-lab-01/: benchmark  hello-world-seq  hello-world-seq.c  hello-world.batch
lab8/mpi-lab-02-e/: Makefile  floyd-warshall-par.cpp  graph-utils-par.cpp
lab9/mpi-lab-03-e/: laplace-par-allreduce.cpp  laplace-par.cpp
mat/ms394734/: CMakeLists.txt  colA.cpp  colA.h  innerABC.cpp  innerABC.h  matrixmul.cpp  utils.cpp  utils.h
mat/performance-tests/: generate.py  sparse_1024
mat/src/: CMakeLists.txt  matrixmul.cpp
tests/: res-gen9.txt
(+23 files in other folders)
